Trying to add email functionality

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                                 <div class="col-md-6">
                                                     <div class="form-group"> <label for="form_recipient">Recipient's
                                                             Name *</label> <input id="form_recipient" type="text"
-                                                            name="recipient" class="form-control"
+                                                            name="form_recipient" class="form-control"
                                                             placeholder="Please enter recipient's name *"
                                                             required="required"
                                                             data-error="Recipient's name is required."> </div>
@@ -197,7 +197,7 @@
                                                 </div>
                                                 <div class="col-md-12"> <input type="submit"
                                                         class="btn btn-success btn-send pt-2 btn-block "
-                                                        value="Send Message" onclick="sendEmail()"> </div>
+                                                        value="Send Message" onclick="sendMail()"> </div>
                                             </div>
                                         </div>
                                     </form>
